@@ -1,3 +1,15 @@
+2017-06-07  Jon Davis  <jond@apple.com>
+
+        Update feature status for features Supported In Preview
+        https://bugs.webkit.org/show_bug.cgi?id=173071
+
+        Reviewed by Darin Adler.
+
+        Updated Media Capture and Streams, Performance Observer, Resource Timing Level 2,
+        User Timing Level 2, Web Cryptography API, WebGL 2, WebRTC.
+
+        * features.json:
+
 2017-06-07  Saam Barati  <sbarati@apple.com>
 
         Assertion failure in com.apple.WebKit.WebContent.Development in com.apple.JavaScriptCore: JSC::DFG::SpeculativeJIT::nonSpeculativePeepholeBranchNullOrUndefined + 141
